feat: add mail log api
