# docs/swagger.json
@@ -459,6 +459,120 @@
                 }
             }
         },
+        "/v1/mail-log/create": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MailLog"
+                ],
+                "summary": "创建邮件日志",
+                "parameters": [
+                    {
+                        "description": "创建邮件日志",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/message.MailLog"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"邮件日志创建成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/mail-log/delete": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MailLog"
+                ],
+                "summary": "删除邮件日志",
+                "parameters": [
+                    {
+                        "description": "ID集合",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.IdsReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"删除成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/mail-log/page": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MailLog"
+                ],
+                "summary": "分页获取邮件日志",
+                "parameters": [
+                    {
+                        "description": "页码, 每页大小",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.PageInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/mail-template/create": {
             "post": {
                 "security": [
@@ -1818,6 +1932,79 @@
                 "type": {
                     "description": "消息类型(枚举)",
                     "type": "integer"
+                }
+            }
+        },
+        "message.MailLog": {
+            "type": "object",
+            "properties": {
+                "appId": {
+                    "description": "应用 ID",
+                    "type": "string"
+                },
+                "attachments": {
+                    "description": "附件JSON",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/common.Attachment"
+                    }
+                },
+                "bcc": {
+                    "description": "密送地址集合",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "cc": {
+                    "description": "抄送地址集合",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "content": {
+                    "description": "邮件具体内容",
+                    "type": "string"
+                },
+                "createdAt": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
+                "errMsg": {
+                    "description": "错误日志",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "主键ID",
+                    "type": "string"
+                },
+                "parameters": {
+                    "description": "邮件参数",
+                    "type": "string"
+                },
+                "requestId": {
+                    "description": "唯一请求 ID",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态 1、正常 2、异常",
+                    "type": "integer"
+                },
+                "templateId": {
+                    "description": "邮件模板 ID",
+                    "type": "string"
+                },
+                "to": {
+                    "description": "发件地址集合",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "updatedAt": {
+                    "description": "更新时间",
+                    "type": "string"
                 }
             }
         },
